# canada-citizenship-test-practice-system

./: .dockerignore  .env.example  .gitignore  CLOUDFLARE-D1-COMPLETE.md  CLOUDFLARE-SETUP.md  D1-MIGRATION.md  DEPLOY-GUIDE.md  DEPLOYMENT.md  DOCKER-QUICKSTART.md  PLAN.md  README.md  build-docker-with-db.ps1  config.py  data_extractor.py  database.py  docker-complete.ps1  docker-compose.yml  docker-setup.ps1  export-to-d1.py  llm_question_generator.py  main.py  pyproject.toml  requirements.txt  verify-docker.ps1  wrangler.toml
.github/workflows/: cloudflare-deploy.yml  deploy.yml
.wrangler/cache/: pages.json  wrangler-account.json
data/: questions.db
migrations/: data.sql  schema.sql
scripts/: github-push.ps1
scripts/deploy/: deploy.ps1
scripts/docker/: build-docker.ps1  install-docker.ps1  run-docker.ps1
webapp/: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.dev  README.md  _redirects  docker-compose.dev.yml  env.d.ts  package-lock.json  package.json  wrangler.toml
webapp/app/: layout.tsx  page.tsx
webapp/app/api/questions/: route-d1.ts  route.ts
webapp/app/api/submit/: route-d1.ts  route.ts
webapp/app/results/: page.tsx
webapp/app/test/: page.tsx
webapp/lib/: database-d1.ts  database.ts
webapp/public/: .gitkeep
